Timeline number spacing not ideal on Retina display #64927

Closed
opened 2019-05-21 09:00:16 +02:00 by Sebastian Koenig · 7 comments

System Information
Operating system: MacOS 10.11.6
Graphics card: GT 750M

Blender Version
Broken: 2.80, e787700393

Short description of error
The Timeline numbers on a Retina disaply are too cramped together. I guess the logic by which it switches from 5 steps to 10 steps etc to have more space between the numbers doesn't take High DPI / Retina into account

Exact steps for others to reproduce the error
Here's the default startup on a MacBookPro with Retina Display the timeline with Blender running on a regular display.IMG_0200.JPG

**System Information** Operating system: MacOS 10.11.6 Graphics card: GT 750M **Blender Version** Broken: 2.80, e78770039397 **Short description of error** The Timeline numbers on a Retina disaply are too cramped together. I guess the logic by which it switches from 5 steps to 10 steps etc to have more space between the numbers doesn't take High DPI / Retina into account **Exact steps for others to reproduce the error** Here's the default startup on a MacBookPro with Retina Display the timeline with Blender running on a regular display.![IMG_0200.JPG](https://archive.blender.org/developer/F7055143/IMG_0200.JPG)
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k
Jacques Lucke was assigned by Brecht Van Lommel 2019-05-21 09:03:02 +02:00

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

I guess the Minimum Grid Spacing doesn't take UI scale into account?

Screenshot 2019-05-21 at 09.09.16.png

I guess the Minimum Grid Spacing doesn't take UI scale into account? ![Screenshot 2019-05-21 at 09.09.16.png](https://archive.blender.org/developer/F7055155/Screenshot_2019-05-21_at_09.09.16.png)
Member

hm the unit says "px", so I used it as pixels. I can also just multiply it with the UI scale, yes.

hm the unit says "px", so I used it as pixels. I can also just multiply it with the UI scale, yes.

This issue was referenced by 9877445ed7

This issue was referenced by 9877445ed744a0ec793a6ef61eceef48548eeb16
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

@JacquesLucke Thanks for fixing. I think any item using pixels should be multiplied by the UI scale.

Sometimes this unit is referred to as pt, or points, which is separate from pixels. But that is a discussion for another day.

@JacquesLucke Thanks for fixing. I think any item using pixels should be multiplied by the UI scale. Sometimes this unit is referred to as pt, or points, which is separate from pixels. But that is a discussion for another day.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64927
No description provided.