Fix T64927: bad timeline number spacing with scaled UI